a few fixes for IE.  lists bleeding out of content on nodes; button text not centered; book navigtion breaking lines.

--- a/sites/all/themes/ginkgo/forms.css
+++ b/sites/all/themes/ginkgo/forms.css
@@ -17,6 +17,7 @@ input.form-submit {
   text-shadow:#222 0px -1px 0px;
   -moz-border-radius:3px;
   -webkit-border-radius:3px;
+  text-align: center; /* IE Fix */
   }
 
   a.button:active,
